alignment issue in about page fixed

--- a/css/fbInject.css
+++ b/css/fbInject.css
@@ -34,6 +34,15 @@ div.claim{
 	top:5px;
 }
 
+div.claimAbout{
+	position:absolute;
+	z-index:1;
+	height: 40px;
+    width: 40px;
+	left:530px;
+	top:20px;
+}
+
 img.popup{
 	height: 30px;
     width: 30px;
